[project]
name = "settlement-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[all] (>=2.0.38,<3.0.0)",
    "asyncpg[all] (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "aiomultiprocess (>=0.9.1,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "geometry (>=0.0.23,<0.0.24)",
    "geoalchemy2 (>=0.17.0,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
